all ui reviews completed

--- a/channel/src/main/webapp/static/app.css
+++ b/channel/src/main/webapp/static/app.css
@@ -191,3 +191,9 @@ label{
   justify-content: flex-start;
 
 }
+.required:after {
+  content:"*";
+  color: rgb(217, 58, 58);
+  font-size: small;
+  vertical-align: super;
+}
