--- a/assure/src/main/webapp/static/app.css
+++ b/assure/src/main/webapp/static/app.css
@@ -191,3 +191,12 @@ label{
   justify-content: flex-start;
 
 }
+.action-btn{
+  width: 85%;
+}
+.required:after {
+  content:"*";
+  color: rgb(217, 58, 58);
+  font-size: small;
+  vertical-align: super;
+}
