--- a/assure/src/main/webapp/static/app.css
+++ b/assure/src/main/webapp/static/app.css
@@ -33,15 +33,18 @@ table {
   overflow: scroll;
 }
 
+
 .jumbotron {
 width:90vw;
 margin:auto;
 padding-top: 20px;
-max-height:800px;
+max-height:515px;
 overflow:hidden;
-margin-bottom: 20px;
+margin-bottom: 10px;
 margin-top: 20px;
 }
+
+
 .buttonBottom{
 width:max-content;
 margin-top:20px;
@@ -66,16 +69,17 @@ thead {
 position: sticky;top: 0; z-index: 1;background: #fff;
 }
 
-tbody {
-overflow:scroll;
-display: block;
-max-height:600px;
-}
+
 thead, tbody tr {
     display: table;
     width: 100%;
     table-layout: fixed;/* even columns width , fix width of table too*/
 }
+#binSkuTbody, #channelTbody, #binSkuTbody, #orderTbody, #partyTbody, #productTbody {
+  overflow:scroll;
+  display: block;
+  height:305px;
+  }
 thead {
     width: calc( 100% - 0.23em )/* scrollbar is average 1em/16px width, remove it from thead width */
 }
